// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.eventdataprovider.shareshuffle;

option java_package = "org.wfanet.measurement.eventdataprovider.shareshuffle";
option java_multiple_files = true;
option java_outer_classname = "VidIndexMapEntryProto";

// An entry in a VidIndexMap
//
// This message helps support serialization of VidIndexMaps.
// Only populations of up to about 2B are supported.
message VidIndexMapEntry {
  message Value {
    // The index of the VID
    int32 index = 1;

    // The position of the VID on the unit interval.
    // This value can be used by a client to filter VIDs with respect to a
    // VidSamplingInterval
    double unit_interval_value = 2;
  }
  // The VID
  int64 key = 1;

  // The VID's value
  Value value = 2;
}
